<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/clinicName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="Search for a Clinic"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="(Enter Address or Service to Search)"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/typeOfSearch"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/addressButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Search by Address/Service" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/StartHour"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00"
                android:inputType="number"
                android:maxLength="@integer/time" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=":"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/StartMin"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00"
                android:inputType="number"
                android:maxLength="@integer/time" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="to" />

            <EditText
                android:id="@+id/EndHour"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00"
                android:inputType="number"
                android:maxLength="@integer/time" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=":"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/EndMin"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="00"
                android:inputType="number"
                android:maxLength="@integer/time" />

        </LinearLayout>

        <Spinner
            android:id="@+id/days"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal" />

        <Button
            android:id="@+id/hoursButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Search By hours" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Results: (Hold to Select Clinic)" />

        <ListView
            android:id="@+id/ClinicResults"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </ListView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>