...
            android:layout_gravity="center"
            android:text="Logout" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="59dp" />
        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Search Clinic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
